cmake_minimum_required(VERSION 3.12)
project(crates)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(sfx)

add_executable(crates
        art/busted/busted_65x16.png
        art/cactus/frames/0001.png
        art/cactus/cactus.blend
        art/cactus/cactus.gif
        art/cactus/cactus.png
        art/car/frames/0001.png
        art/car/frames/0002.png
        art/car/frames/0003.png
        art/car/frames/0004.png
        art/car/frames/0005.png
        art/car/frames/0006.png
        art/car/frames/0007.png
        art/car/frames/0008.png
        art/car/frames/0009.png
        art/car/frames/0010.png
        art/car/frames/0011.png
        art/car/frames/0012.png
        art/car/frames/0013.png
        art/car/frames/0014.png
        art/car/frames/0015.png
        art/car/frames/0016.png
        art/car/frames/0017.png
        art/car/frames/0018.png
        art/car/frames/0019.png
        art/car/frames/0020.png
        art/car/frames/0021.png
        art/car/frames/0022.png
        art/car/frames/0023.png
        art/car/frames/0024.png
        art/car/inspiration/1.jpg
        art/car/inspiration/2.png
        art/car/car-mask-black.gif
        art/car/car-mask-white.gif
        art/car/car.blend
        art/car/car.gif
        art/car/car_20x16.png
        "art/compycore/dev/dither (1).png"
        art/compycore/dev/IMG_20171125_104645.jpg
        "art/compycore/dev/Michael Wink (1).png"
        "art/compycore/dev/Michael Wink (10).png"
        "art/compycore/dev/Michael Wink (11).png"
        "art/compycore/dev/Michael Wink (2).png"
        "art/compycore/dev/Michael Wink (3).png"
        "art/compycore/dev/Michael Wink (4).png"
        "art/compycore/dev/Michael Wink (5).png"
        "art/compycore/dev/Michael Wink (6).png"
        "art/compycore/dev/Michael Wink (7).png"
        "art/compycore/dev/Michael Wink (8).png"
        "art/compycore/dev/Michael Wink (9).png"
        "art/compycore/dev/Michael Wink.png"
        art/compycore/compycore_67x16.png
        art/compycore/michael_64x48.png
        art/compycore/wink_7x8.png
        art/cop/frames/0001.png
        art/cop/frames/0002.png
        art/cop/frames/0003.png
        art/cop/frames/0004.png
        art/cop/frames/0005.png
        art/cop/frames/0006.png
        art/cop/frames/0007.png
        art/cop/frames/0008.png
        art/cop/frames/0009.png
        art/cop/frames/0010.png
        art/cop/frames/0011.png
        art/cop/frames/0012.png
        art/cop/frames/0013.png
        art/cop/frames/0014.png
        art/cop/frames/0015.png
        art/cop/frames/0016.png
        art/cop/frames/0017.png
        art/cop/frames/0018.png
        art/cop/frames/0019.png
        art/cop/frames/0020.png
        art/cop/frames/0021.png
        art/cop/frames/0022.png
        art/cop/frames/0023.png
        art/cop/frames/0024.png
        art/cop/cop-mask-black.gif
        art/cop/cop-mask-white.gif
        art/cop/cop.blend
        art/cop/cop.gif
        art/cop/cop_20x16.png
        art/crate/crate_16x16.png
        art/drop/drop_16x16.png
        art/dust/dust-mask-black.gif
        art/dust/dust-mask-white.gif
        art/dust/dust.gif
        art/dust/dust_8x8.png
        art/instructions/instructions.png
        art/menu/inspiration/menu.jpg
        art/menu/inspiration/pablo.jpg
        art/menu/fx_14x8.png
        art/menu/help_21x8.png
        art/menu/info_21x8.png
        art/menu/menu.png
        art/menu/ny_6x8.png
        art/menu/play_21x8.png
        art/numbers/numbers_6x8.png
        art/pablo/pablo_33x24.png
        art/qrcode/qrcode_64x64.png
        art/skid/frames/0001.png
        art/skid/frames/0002.png
        art/skid/frames/0003.png
        art/skid/frames/0004.png
        art/skid/frames/0005.png
        art/skid/frames/0006.png
        art/skid/frames/0007.png
        art/skid/frames/0008.png
        art/skid/frames/0009.png
        art/skid/frames/0010.png
        art/skid/frames/0011.png
        art/skid/frames/0012.png
        art/skid/frames/0013.png
        art/skid/frames/0014.png
        art/skid/frames/0015.png
        art/skid/frames/0016.png
        art/skid/frames/0017.png
        art/skid/frames/0018.png
        art/skid/frames/0019.png
        art/skid/frames/0020.png
        art/skid/frames/0021.png
        art/skid/frames/0022.png
        art/skid/frames/0023.png
        art/skid/frames/0024.png
        art/skid/skid.blend
        art/skid/skid.gif
        art/skid/skid_20x16.png
        art/spike/spike_7x8.png
        art/swat/frames/0001.png
        art/swat/frames/0002.png
        art/swat/frames/0003.png
        art/swat/frames/0004.png
        art/swat/frames/0005.png
        art/swat/frames/0006.png
        art/swat/frames/0007.png
        art/swat/frames/0008.png
        art/swat/frames/0009.png
        art/swat/frames/0010.png
        art/swat/frames/0011.png
        art/swat/frames/0012.png
        art/swat/frames/0013.png
        art/swat/frames/0014.png
        art/swat/frames/0015.png
        art/swat/frames/0016.png
        art/swat/frames/0017.png
        art/swat/frames/0018.png
        art/swat/frames/0019.png
        art/swat/frames/0020.png
        art/swat/frames/0021.png
        art/swat/frames/0022.png
        art/swat/frames/0023.png
        art/swat/frames/0024.png
        art/swat/swat.blend
        art/swat/swat.blend1
        art/swat/swat.gif
        art/swat/swat_20x16.png
        dev/map/index.html
        "sfx/song (1).atm"
        sfx/song.atm
        "sfx/song_export (1).h"
        sfx/song_export.h
        busted-image.h
        busted.h
        cactus-image.h
        cactus.h
        camera.h
        car.h
        collisions.h
        compycore-image.h
        compycore.h
        cop-image.h
        cop.h
        crate-image.h
        crate.h
        crates.ino
        crates.ino.leonardo.hex
        crates.ino.with_bootloader.leonardo.hex
        drop-image.h
        drop.h
        dust-image.h
        dust.h
        entity.h
        game.h
        globals.h
        instructions-image.h
        LICENSE
        list.h
        menu-image.h
        menu.h
        numbers-image.h
        player-image.h
        player.h
        police.h
        qrcode-image.h
        README.md
        simple.h
        skid-image.h
        skid.h
        solid.h
        spike-image.h
        spike.h
        swat-image.h
        swat.h
        utils.h)
